--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==9.0.1
+beautifulsoup4==4.12.2
 blinker==1.6.3
 certifi==2019.11.28
 chardet==3.0.4
@@ -7,6 +8,7 @@ dbus-python==1.2.16
 distro==1.4.0
 distro-info===0.23ubuntu1
 flask==3.0.0
+Flask-Login==0.6.2
 Flask-RESTful==0.3.10
 greenlet==1.1.2
 idna==2.8
@@ -27,9 +29,10 @@ pytz==2023.3.post1
 requests==2.22.0
 requests-unixsocket==0.2.0
 six==1.14.0
+soupsieve==2.5
 SQLAlchemy==1.4.32
 ssh-import-id==5.10
 unattended-upgrades==0.1
 urllib3==1.25.8
-werkzeug==2.3.0
+Werkzeug==2.3.0
 zipp==3.17.0
